# minui-rs

./: .gitignore  Cargo.toml  README.md
cores/: makefile
crates/common/: Cargo.toml
crates/common/src/: lib.rs  paths.rs
crates/minarch/: Cargo.toml
crates/minarch/src/: audio.rs  config.rs  core.rs  game.rs  input.rs  lib.rs  main.rs  main_loop.rs  menu.rs  save.rs  video.rs
crates/minui/: Cargo.toml
crates/minui-platform/: Cargo.toml
crates/minui-platform/src/: paths.rs  platform.rs
crates/minui-power/: Cargo.toml
crates/minui-power/src/: lib.rs
crates/minui-render/: Cargo.toml
crates/minui-render/src/: lib.rs
crates/minui/src/: launch.rs  lib.rs  main.rs  scan.rs  state.rs
crates/platform/: Cargo.toml
crates/platform/src/: lib.rs
crates/power/: Cargo.toml
crates/power/src/: lib.rs
crates/render/: Cargo.toml
crates/render/src/: lib.rs
skeleton/EXTRAS/Emus/gkdpixel/PKM.pak/: launch.sh
skeleton/EXTRAS/Emus/m17/P8.pak/: launch.sh
skeleton/EXTRAS/Emus/miyoomini/MGBA.pak/: launch.sh
skeleton/EXTRAS/Emus/miyoomini/P8.pak/: launch.sh
skeleton/EXTRAS/Emus/miyoomini/PCE.pak/: launch.sh
skeleton/EXTRAS/Emus/miyoomini/PKM.pak/: launch.sh
skeleton/EXTRAS/Emus/miyoomini/SUPA.pak/: launch.sh
skeleton/EXTRAS/Emus/miyoomini/VB.pak/: launch.sh
skeleton/EXTRAS/Emus/my282/SUPA.pak/: launch.sh
skeleton/EXTRAS/Emus/my355/NGP.pak/: launch.sh
skeleton/EXTRAS/Emus/my355/P8.pak/: launch.sh
skeleton/EXTRAS/Emus/my355/PCE.pak/: launch.sh
skeleton/EXTRAS/Emus/rg35xx/PCE.pak/: launch.sh
skeleton/EXTRAS/Emus/rg35xxplus/GG.pak/: launch.sh
skeleton/EXTRAS/Emus/rg35xxplus/MGBA.pak/: launch.sh
skeleton/EXTRAS/Emus/rg35xxplus/PKM.pak/: launch.sh
skeleton/EXTRAS/Emus/rg35xxplus/VB.pak/: launch.sh
skeleton/EXTRAS/Emus/tg5040/NGP.pak/: launch.sh
skeleton/EXTRAS/Emus/tg5040/SUPA.pak/: launch.sh
skeleton/EXTRAS/Emus/tg5040/VB.pak/: launch.sh
skeleton/EXTRAS/Emus/trimuismart/MGBA.pak/: launch.sh
skeleton/SYSTEM/gkdpixel/paks/Emus/GB.pak/: launch.sh
skeleton/SYSTEM/gkdpixel/paks/Emus/MD.pak/: launch.sh
skeleton/SYSTEM/gkdpixel/paks/MinUI.pak/: launch.sh
skeleton/SYSTEM/m17/paks/Emus/GBA.pak/: launch.sh
skeleton/SYSTEM/m17/paks/MinUI.pak/: launch.sh
skeleton/SYSTEM/magicmini/paks/MinUI.pak/: launch.sh
skeleton/SYSTEM/miyoomini/paks/Emus/FC.pak/: launch.sh
skeleton/SYSTEM/miyoomini/paks/Emus/GBA.pak/: launch.sh
skeleton/SYSTEM/miyoomini/paks/Emus/GBC.pak/: launch.sh
skeleton/SYSTEM/miyoomini/paks/Emus/MD.pak/: launch.sh
skeleton/SYSTEM/miyoomini/paks/Emus/PS.pak/: launch.sh
skeleton/SYSTEM/miyoomini/paks/Emus/SFC.pak/: launch.sh
skeleton/SYSTEM/miyoomini/paks/MinUI.pak/: launch.sh
skeleton/SYSTEM/my282/paks/Emus/GBA.pak/: launch.sh
skeleton/SYSTEM/my282/paks/MinUI.pak/: launch.sh
skeleton/SYSTEM/my355/paks/Emus/FC.pak/: launch.sh
skeleton/SYSTEM/my355/paks/MinUI.pak/: launch.sh
skeleton/SYSTEM/rg35xx/paks/Emus/PS.pak/: launch.sh
skeleton/SYSTEM/rg35xx/paks/MinUI.pak/: launch.sh
skeleton/SYSTEM/rg35xxplus/paks/Emus/GBC.pak/: launch.sh
skeleton/SYSTEM/rg35xxplus/paks/Emus/SFC.pak/: launch.sh
skeleton/SYSTEM/rg35xxplus/paks/MinUI.pak/: launch.sh
skeleton/SYSTEM/rgb30/paks/MinUI.pak/: launch.sh
skeleton/SYSTEM/tg5040/paks/Emus/FC.pak/: launch.sh
skeleton/SYSTEM/tg5040/paks/Emus/SFC.pak/: launch.sh
skeleton/SYSTEM/tg5040/paks/MinUI.pak/: launch.sh
skeleton/SYSTEM/trimuismart/paks/MinUI.pak/: launch.sh
skeleton/SYSTEM/zero28/paks/Emus/PS.pak/: launch.sh
skeleton/SYSTEM/zero28/paks/MinUI.pak/: launch.sh
src/: launch.rs  lib.rs  paths.rs  platform.rs  power.rs  render.rs  scan.rs  state.rs  types.rs  utils.rs
xtask/: Cargo.toml
xtask/src/: main.rs
