[workspace]
resolver = "2"
members = [
    "crates/common",
    "crates/platform",
    "crates/render",
    "crates/power",
    "crates/minui",
    "crates/minarch",

    # Platforms
    "platforms/pc",
    "platforms/rg35xxplus",
    "platforms/rg35xx",
    "platforms/miyoomini",
    "platforms/trimuismart",
    "platforms/tg5040",
    "platforms/rgb30",
    "platforms/m17",
    "platforms/my282",
    "platforms/my355",
    "platforms/magicmini",
    "platforms/zero28",
    "platforms/gkdpixel",

    # Build Tool
    "xtask",
]
